Polish pathfinder, fix CLI

--- a/pathfinder/README.html
+++ b/pathfinder/README.html
@@ -1,4 +1,10 @@
 
+<!DOCTYPE html>
+<html>
+<title>README</title>
+
+<xmp theme="cerulean" style="display:none;">
+
 # Usage
 
 I suggest a terminal but regardless, just do this:
@@ -58,3 +64,8 @@ The file should work with all python 2.7.X distributions.
   use bash (or your equivalent) to pass the arguments in, like so:
 
     $ cat example_tables.txt | python pathfinder.py
+
+</xmp>
+
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+</html>
