--- a/pathfinder/README.html
+++ b/pathfinder/README.html
@@ -3,32 +3,19 @@
 <html>
 <title>README</title>
 
-<xmp theme="cerulean" style="display:none;">
+<xmp theme="readable" style="display:none;">
 
-# Usage
+# Usage Info
 
-I suggest a terminal but regardless, just do this:
-
-    python pathfinder.py
+    python pathfinder.py --help
 
 The file should work with all python 2.7.X distributions.
 
 # pathfinder.py
-    - Written by Aaron Delaney, 2015
-    - Built with https://www.python.org/
-    - Developed for CPSSD1 @ DCU
-    - References:
-      - Loading from a file in unix-likes:
-       http://unix.stackexchange.com/questions/149726/how-to-pass-each-line-of-a-text-file-as-an-argument-to-a-command
-       @konsolebox
+- Written by Aaron Delaney, 2015
+- Built with https://www.python.org/
+- Developed for CPSSD1 @ DCU
 
-
-## Command Line Interface
-
-# pathfinder.py
-    - Written by Aaron Delaney, 2015
-    - Built with https://www.python.org/
-    - Developed for CPSSD1 @ DCU
 
 ## Command Line Interface
 
@@ -40,7 +27,7 @@ The file should work with all python 2.7.X distributions.
 
     Print this help file
 
-  `--test`:
+  `--test`st:
 
     Initiates test protocol.
 
@@ -62,9 +49,9 @@ The file should work with all python 2.7.X distributions.
 
   However to use it efficiently you can just make a file with your tables and
   use bash (or your equivalent) to pass the arguments in, like so:
-
-    $ cat example_tables.txt | python pathfinder.py
-
+  ```sh
+  $ cat example_tables.txt | python pathfinder.py
+  ```
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
