--- a/pathfinder/README.html
+++ b/pathfinder/README.html
@@ -4,54 +4,103 @@
 <title>README</title>
 
 <xmp theme="readable" style="display:none;">
+  pathfinder.py
+  =============
+  - Written by Aaron Delaney, 2015
+  - Built with https://www.python.org/
+  - Developed for CPSSD1 @ DCU
 
-# Usage Info
+  Command Line Interface
+  ----------------------
 
-    python pathfinder.py --help
+  Usage:
+      python pathfinder.py [OPTIONS] [TABLE FILE PATHS ...]
 
-The file should work with all python 2.7.X distributions.
+  Prints out the amount of paths in a table from the
+  top left to the bottom right.
 
-# pathfinder.py
-- Written by Aaron Delaney, 2015
-- Built with https://www.python.org/
-- Developed for CPSSD1 @ DCU
+  If no table_files are provided, pathfinder.py will enter an interactive
+  user mode.
 
+  Options
+  -------
 
-## Command Line Interface
-
-#### Usage: pathfinder.py [OPTIONS]
-
-- ### Options:
-
-  `--help`:
-
-    Print this help file
-
-  `--test`st:
-
-    Initiates test protocol.
-
-    This uses the in-build series of tests to ensure the program works as
-    intended.
-
-  `--verbose`:
+  - `--verbose:`
 
     Enables verbose output
 
-- ### CLI:
+  - `--help`
 
-  The command line interface is simple but powerful.
+    Print this help file
 
-  Table Input Format:
-      [ [1,1,0,0], [1,1,1,1], [1,1,1,1], [1,1,1,1] ]
+  - `--test`
 
-  To use it normally just run the script.
+    Initiates test protocol.
 
-  However to use it efficiently you can just make a file with your tables and
-  use bash (or your equivalent) to pass the arguments in, like so:
-  ```sh
-  $ cat example_tables.txt | python pathfinder.py
+    This uses the in-build series of tests to ensure the num_of_paths works as
+    intended.
+
+  Table Files
+  -----------
+
+  A table file is a file representing a table, or a series of tables.
+
+  You should pass in the file path, relative to where you run pathfinder.
+
+  Here is an example of a table entered in one of these files:
+
   ```
+  1111
+  1101
+  1111
+  1111
+  ```
+
+  If you want to have multiple tables in the same file
+  separate the with a newline.
+
+  It's important you get the size right here, unlike in
+  the user interactive mode.
+
+  Examples
+  --------
+  ```
+  # Testing
+  $ python pathfinder.py --verbose --test
+
+  # Using example files
+  $ python pathfinder.py --verbose example_tables.txt
+
+  # Interactive mode
+  $ python pathfinder.py
+  ```
+
+  Input Assumptions
+  -----------------
+
+  To save time for people entering many lines, you can enter
+  something like this:
+
+  ```
+  $ 11
+  $ 1111
+  ```
+
+  And pathfinder will assume you mean:
+
+  ```
+  $ 1100 # <-- zeros were padded as an assumption
+  $ 1111
+  ```
+
+  Interactive Mode
+  ----------------
+
+  The input is much the same as the file input.
+
+  Enter a string of characters for each row in the table and to signify
+  then end of table just enter a newline.
+
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
